# podcast_agent

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: WEBPAGE_RULES.md  a-peace-to-end-all-peace.html  black-wave.html  freedom-at-midnight.html  ghost-wars.html  gods-shadow.html  index.html  india-after-gandhi.html  india-in-the-persianate-age.html  last-mughal.html  manifest.json  midnights-furies.html  punjab.html  retrieval-ranking-pipeline.md  return-of-a-king.html  the-anarchy.html  the-crusades-authoritative-history.html  the-fall-of-the-ottomans.html  the-great-war-for-civilisation.html  the-iranian-revolution.html  the-partition-of-india.html  the-question-of-palestine.html  the-struggle-for-pakistan.html  webpage_rules.json
downloaded_books/: the_great_war_for_civilisation.cleaned.txt
examples/: batch_manifest.sample.json  houses_of_the_self.txt  river_of_hours.txt  stars_beneath_the_skin.txt
output/: v28_decomposition_equivalent_payload_from_final_run.json  v28_theme_decomposition_prompt_for_gpt.txt
sample_books/: 1453.cleaned.v2.txt  a_peace_to_end_all_peace.cleaned.txt  afgantsy.cleaned.txt  between_two_revolutions.cleaned.txt  black-wave.cleaned.v2.txt  fall_of_ottoman.cleaned.txt  freedom_at_midnight.short.txt  ghost_wars.cleaned.chapters.txt  gods_shadow.cleaned.txt  india_after_gandhi.short.txt  indian_summer.cleaned.validation.json  mantle_of_the_prophet.cleaned.txt  midnights_furies.short.txt  osmans_dream.cleaned.txt  osmans_dream.cleaned.validation.json  the_age_of_jihad.cleaned.txt  the_great_partition.cleaned.v2.txt  the_looming_tower.cleaned.txt  the_other_side_of_silence.cleaned.txt  (+3 more)
scripts/: build_manifest.py  (+4 more)
(+140 files in other folders)
