[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-agent"
version = "0.1.0"
description = "Modular agentic book-to-podcast pipeline with Postgres-backed retrieval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.12,<3",
  "psycopg[binary]>=3.3,<4",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
podcast-agent = "podcast_agent.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
